1.新增笔记 2. 增加utils 目录 保存一些工具模块

--- a/Refactoring/重构阅读笔记.md
+++ b/Refactoring/重构阅读笔记.md
@@ -1,6 +1,46 @@
-《重构》
-#### 
-在不改变软件可观察行为的为前提下改善其内部结构
-
+## 《重构》
+Ward Cunningham  Kent Beck
+**在不改变软件可观察行为的为前提下改善其内部结构**
+Definition: 
+    noun. A change made to the internal structure of software to make it easier to understand and cheaper to modify without changing its observable behavior.
+    verb. To restructure software by applying a series of refactorings without changing its observable behavior.
 1. 当要为程序添加一个新特性时, 如果发现代码现有结构使你无法很方便的达成目的, 那就先重构程序, 使特性的添加比较容易进行。
 2. 类属性和功能要明确, 自己管理自己的数据。
+3. 确定所有事物和行为在代码中只表述一次
+4. 间接层和重构
+    允许逻辑共享
+    分开解释意图和实现
+    隔离变化:  类似多态特性, 子类可重写公共接口, 自行维护
+    封装条件逻辑: 亦是多态特性, 将条件逻辑转化为消息形式
+
+#### 为什么重构
+    - find bugs
+    - improves the design of software (don't allow changes to endanger existing behavior)
+    - makes software easier to understand
+    - program faster
+
+#### 何时需要重构
+    - add Function
+    - fix a bug
+    - Code Review  (Pair Programming) 结对编程
+
+
+#### 代码坏味道
+    - Duplicated Code
+        提取相似部分, Extract Method
+    - Long Method
+    - Large Class
+    - Long Parmeter List
+    - Divergent Change(发散式变化: 一个类受多种变化的影响, 一处修改导致多处需要跟着修改)
+    - Shotgun Surgery(散弹式修改: 一种变化引发多个类相应修改, 要做到 外界变化 与 需要修改的类 趋于一一对应)
+
+##### Method
+1. Replace Type Code with State/Strategy(构建中间层, 抽象基类, 是一种设计模式)
+2. Move Method
+3. Replace Conditional with Polymorphism (多态取代条件表达式)
+   1. 根据对象的不同类型而采取的不同的行为, 减少不必要的条件表达式。(switch, if else) P205
+
+4. Replace Method with Method Object(以函数对象取代函数)  **杀手锏**  P135
+    - 问题: 有一个大型函数, 当要使用Extract Method 的时候发现 函数内有大量的临时变量和参数。
+        为了提高代码的可读性和简洁, 一般先使用Extract Method, 如果有的时变量和参数 可以用 Replace Temp with Query消除临时元素。
+        Introduce Parameter Object(引入参数对象)  Preserve Whole Object()  可将过长的参数变得更简洁一些。
