添加 utils eventEngine traceback

--- a/Refactoring/重构阅读笔记.md
+++ b/Refactoring/重构阅读笔记.md
@@ -33,6 +33,7 @@ Definition:
     - Long Parmeter List
     - Divergent Change(发散式变化: 一个类受多种变化的影响, 一处修改导致多处需要跟着修改)
     - Shotgun Surgery(散弹式修改: 一种变化引发多个类相应修改, 要做到 外界变化 与 需要修改的类 趋于一一对应)
+    - Data Clumps(数据泥团)
 
 ##### Method
 1. Replace Type Code with State/Strategy(构建中间层, 抽象基类, 是一种设计模式)
